--- a/main.html
+++ b/main.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>日本の農業の現状と将来性</title>
+    <meta name="description" content="日本の農業の現状と将来性に関する包括的な分析レポート。収益性、市場動向、新規参入のビジネスチャンスについて詳しく解説。">
+    <meta name="keywords" content="日本農業, 収益性, 統計, コメ市場, ビジネスチャンス, 農業経営">
+    <meta name="author" content="農業研究チーム">
+    <title>日本の農業の現状と将来性 - 包括的分析レポート</title>
     <link rel="stylesheet" href="public/styles.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌾</text></svg>">
 </head>
 <body>
     <header>
-        <nav>
-            <div class="nav-container">
-                <h1>日本の農業の現状と将来性</h1>
-                <ul class="nav-menu">
-                    <li><a href="main.html" class="active">概要</a></li>
-                    <li><a href="introduction.html">はじめに</a></li>
-                    <li><a href="profitability.html">収益性分析</a></li>
-                    <li><a href="statistics.html">基本情報・統計</a></li>
-                    <li><a href="rice-market.html">コメ市場分析</a></li>
-                    <li><a href="business-opportunities.html">ビジネスチャンス</a></li>
-                    <li><a href="conclusion.html">まとめ</a></li>
+        <div class="container">
+            <div class="header-content">
+                <div class="logo">🌾 日本農業分析</div>
+                <nav>
+                    <ul>
+                        <li><a href="main.html" class="active">概要</a></li>
+                        <li><a href="introduction.html">はじめに</a></li>
+                        <li><a href="profitability.html">収益性分析</a></li>
+                        <li><a href="statistics.html">基本情報・統計</a></li>
+                        <li><a href="rice-market.html">コメ市場分析</a></li>
+                        <li><a href="business-opportunities.html">ビジネスチャンス</a></li>
+                        <li><a href="conclusion.html">まとめ</a></li>
                 </ul>
             </div>
         </nav>
